<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/background_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_title"
            android:textSize="24sp"
            android:textColor="@color/button_primary"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_description"
            android:textSize="18sp"
            android:textColor="@color/black_50"
            android:lineSpacingExtra="8dp"
            android:layout_marginBottom="32dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_features_title"
            android:textSize="20sp"
            android:textColor="@color/button_primary"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="32dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feature_1"
                android:textSize="16sp"
                android:textColor="@color/black_50"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feature_2"
                android:textSize="16sp"
                android:textColor="@color/black_50"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feature_3"
                android:textSize="16sp"
                android:textColor="@color/black_50"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feature_4"
                android:textSize="16sp"
                android:textColor="@color/black_50"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_account_type"
            android:textSize="20sp"
            android:textColor="@color/button_primary"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="24dp">

            <RadioButton
                android:id="@+id/radioAdmin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_admin"
                android:textSize="18sp"
                android:layout_marginBottom="12dp"
                android:padding="12dp"
                android:background="@drawable/radio_button_background"/>

            <RadioButton
                android:id="@+id/radioBarber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_barber"
                android:textSize="18sp"
                android:layout_marginBottom="12dp"
                android:padding="12dp"
                android:background="@drawable/radio_button_background"/>

            <RadioButton
                android:id="@+id/radioCustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_customer"
                android:textSize="18sp"
                android:padding="12dp"
                android:background="@drawable/radio_button_background"/>
        </RadioGroup>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="24dp"
            android:text="@string/next"
            app:cornerRadius="6dp"
            app:backgroundTint="@color/blue_500" />
    </LinearLayout>
</ScrollView>