<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/background_gray"
    android:layoutDirection="rtl">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_is_your_phone"
        android:textColor="@color/text_primary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_instructions"
        android:textColor="@color/text_secondary"
        android:textSize="14sp"
        android:layout_marginTop="8dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:boxStrokeColor="@color/border_dark"
        android:gravity="bottom"
        app:prefixTextColor="@color/text_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_hint"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/phone_notifications_note"
        android:textColor="@color/text_secondary"
        android:textSize="12sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="24dp"
        android:text="@string/next"
        app:cornerRadius="6dp"
        app:backgroundTint="@color/blue_500" />


</LinearLayout>